--- a/index.html
+++ b/index.html
@@ -23,13 +23,23 @@
 	<body>
 		<!-- Heading section -->
 		<header>
-			<h1 class="heading-title">All Thinks Are Possible If You believe</h1>
-			<p class="heading-description">
-				There are many variations of passages of Lorem Ipsum available, but the
-				majority have suffered alteration in some form, by injected humour, or
-				randomised words
-			</p>
-			<button class="btn-primary">Contact Us</button>
+			<div class="header-container">
+				<div class="heading-title-container">
+					<h1 class="heading-title">
+						All Thinks Are <br />
+						Possible If You <br />
+						believe
+					</h1>
+				</div>
+				<div class="heading-description-container">
+					<p class="heading-description">
+						There are many variations of passages of Lorem Ipsum <br />
+						available, but the majority have suffered alteration in some <br />
+						form, by injected humour, or randomised words
+					</p>
+				</div>
+				<button class="btn-primary">Contact Us</button>
+			</div>
 		</header>
 		<main></main>
 		<footer></footer>
