--- a/index.html
+++ b/index.html
@@ -41,7 +41,78 @@
 				<button class="btn-primary">Contact Us</button>
 			</div>
 		</header>
-		<main></main>
+		<main>
+			<!-- previous failures section -->
+			<section class="past-story">
+				<div class="past-story-container">
+					<div class="img-container">
+						<img src="/images/person.png" alt="person telling her past story" />
+					</div>
+					<div class="article-container">
+						<h1 class="article-title">
+							My failures of <br />
+							previous year
+						</h1>
+						<p class="article-description">
+							Contrary to popular belief, Lorem Ipsum is not <br />
+							simply random text. It has roots in a piece of <br />
+							classical Latin literature from 45 BC, making it over <br />
+							2000 years old. Richard McClintock.
+						</p>
+						<div>
+							<ul class="failing-items">
+								<li>Contrary to popular belief, is not simply.</li>
+								<li>Contrary to popular belief.</li>
+								<li>Contrary to popular , is not simply.</li>
+								<li>Contrary to popular belief, is not simply.</li>
+								<li>Contrary to popular simply.</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- plan section -->
+			<section class="my-plan">
+				<div>
+					<h1 class="article-title">My Plan</h1>
+					<div class="plan-container">
+						<div class="plan-card">
+							<img src="/images/icons/web.png" alt="web development" />
+
+							<h1 class="card-title">Web Development</h1>
+							<p class="card-description">I want to start</p>
+						</div>
+
+						<div class="plan-card">
+							<img src="/images/icons/js.png" alt="javascript" />
+							<h1 class="card-title">Javascript</h1>
+							<p class="card-description">I want to learn javascript</p>
+						</div>
+
+						<div class="plan-card">
+							<img src="/images/icons/smoke.png" alt="quit smoking" />
+							<h1 class="card-title">Smoking Habit</h1>
+							<p class="card-description">I want to end smoking habit</p>
+						</div>
+
+						<div class="plan-card">
+							<img src="/images/icons/ecom.png" alt="e-commerce" />
+							<h1 class="card-title">E-commerce</h1>
+							<p class="card-description">I want to develop</p>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="motivation-section">
+				<div class="motivation-banner-container">
+					<h1 class="section-title">
+						Always keep a positive <br />
+						mindset
+					</h1>
+					<button class="btn-primary">Call Now</button>
+				</div>
+			</section>
+		</main>
 		<footer></footer>
 	</body>
 </html>
