--- a/index.html
+++ b/index.html
@@ -113,6 +113,38 @@
 				</div>
 			</section>
 		</main>
-		<footer></footer>
+		<footer>
+			<div class="contact-info-container">
+				<h1 class="section-title">Future</h1>
+				<p class="section-description">
+					There are many variations of passages of Lorem Ipsum <br />
+					available, but the majority have suffered alteration in some <br />
+					form, by injected humour, or randomised words
+				</p>
+				<p class="contact-info">Email:info@gmail.com</p>
+				<p class="contact-info">Phone : 01500 00 00 00</p>
+				<div class="social-links">
+					<a href=""><img src="/images/icons/fb.png" alt="fb-icon" /></a
+					><a href=""
+						><img src="/images/icons/twitter.png" alt="twitter-icon" /></a
+					><a href=""
+						><img src="/images/icons/youtube.png" alt="youtube-icon"
+					/></a>
+				</div>
+			</div>
+
+			<div class="subscription-container">
+				<h1 class="section-sub-title">Subscribe</h1>
+				<form>
+					<input
+						class="subscribe-email"
+						type="email"
+						placeholder="Enter your email"
+						size="50"
+					/>
+					<button class="btn-primary" type="submit">Subscribe</button>
+				</form>
+			</div>
+		</footer>
 	</body>
 </html>
