img not rendering tried to fix

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<section class="past-story">
 				<div class="past-story-container">
 					<div class="img-container">
-						<img src="/images/person.png" alt="person telling her past story" />
+						<img src="images/person.png" alt="person telling her past story" />
 					</div>
 					<div class="article-container">
 						<h1 class="article-title">
