bonus section temp added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 		<link
 			rel="shortcut icon"
-			href="/images/icons/step-favicon.png"
+			href="images/icons/step-favicon.png"
 			type="image/x-icon"
 		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -61,11 +61,26 @@
 						</p>
 						<div>
 							<ul class="failing-items">
-								<li>Contrary to popular belief, is not simply.</li>
-								<li>Contrary to popular belief.</li>
-								<li>Contrary to popular , is not simply.</li>
-								<li>Contrary to popular belief, is not simply.</li>
-								<li>Contrary to popular simply.</li>
+								<li>
+									<span class="tick-sign">&#x2713;</span> Contrary to popular
+									belief, is not simply.
+								</li>
+								<li>
+									<span class="tick-sign">&#x2713;</span>Contrary to popular
+									belief.
+								</li>
+								<li>
+									<span class="tick-sign">&#x2713;</span>Contrary to popular ,
+									is not simply.
+								</li>
+								<li>
+									<span class="tick-sign">&#x2713;</span>Contrary to popular
+									belief, is not simply.
+								</li>
+								<li>
+									<span class="tick-sign">&#x2713;</span>Contrary to popular
+									simply.
+								</li>
 							</ul>
 						</div>
 					</div>
@@ -110,6 +125,19 @@
 						mindset
 					</h1>
 					<button class="btn-primary">Call Now</button>
+				</div>
+			</section>
+			<!-- personally added a section on time management for self improvement -->
+			<!-- bonus section -->
+
+			<section class="time-management">
+				<div class="time-management-container">
+					<h1 class="section-title"></h1>
+					<p class="section-description"></p>
+					<div class="management-cards-container">
+						<div class="time-card"></div>
+						<div class="time-card"></div>
+					</div>
 				</div>
 			</section>
 		</main>
