--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 		<link
 			rel="shortcut icon"
-			href="images/icons/step-favicon.png"
+			href="./images/icons/step-favicon.png"
 			type="image/x-icon"
 		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -46,7 +46,7 @@
 			<section class="past-story">
 				<div class="past-story-container">
 					<div class="img-container">
-						<img src="images/person.png" alt="person telling her past story" />
+						<img src="/images/person.png" alt="person telling her past story" />
 					</div>
 					<div class="article-container">
 						<h1 class="article-title">
