--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<link rel="stylesheet" href="styles/style.css" />
+		<link rel="stylesheet" href="./styles/style.css" />
 
 		<link
 			rel="shortcut icon"
@@ -46,7 +46,10 @@
 			<section class="past-story">
 				<div class="past-story-container">
 					<div class="img-container">
-						<img src="/images/person.png" alt="person telling her past story" />
+						<img
+							src="./images/person.png"
+							alt="person telling her past story"
+						/>
 					</div>
 					<div class="article-container">
 						<h1 class="article-title">
@@ -92,26 +95,26 @@
 					<h1 class="article-title">My Plan</h1>
 					<div class="plan-container">
 						<div class="plan-card">
-							<img src="/images/icons/web.png" alt="web development" />
+							<img src="./images/icons/web.png" alt="web development" />
 
 							<h1 class="card-title">Web Development</h1>
 							<p class="card-description">I want to start</p>
 						</div>
 
 						<div class="plan-card">
-							<img src="/images/icons/js.png" alt="javascript" />
+							<img src="./images/icons/js.png" alt="javascript" />
 							<h1 class="card-title">Javascript</h1>
 							<p class="card-description">I want to learn javascript</p>
 						</div>
 
 						<div class="plan-card">
-							<img src="/images/icons/smoke.png" alt="quit smoking" />
+							<img src="./images/icons/smoke.png" alt="quit smoking" />
 							<h1 class="card-title">Smoking Habit</h1>
 							<p class="card-description">I want to end smoking habit</p>
 						</div>
 
 						<div class="plan-card">
-							<img src="/images/icons/ecom.png" alt="e-commerce" />
+							<img src="./images/icons/ecom.png" alt="e-commerce" />
 							<h1 class="card-title">E-commerce</h1>
 							<p class="card-description">I want to develop</p>
 						</div>
@@ -152,11 +155,11 @@
 				<p class="contact-info">Email:info@gmail.com</p>
 				<p class="contact-info">Phone : 01500 00 00 00</p>
 				<div class="social-links">
-					<a href=""><img src="/images/icons/fb.png" alt="fb-icon" /></a
+					<a href=""><img src="./images/icons/fb.png" alt="fb-icon" /></a
 					><a href=""
-						><img src="/images/icons/twitter.png" alt="twitter-icon" /></a
+						><img src="./images/icons/twitter.png" alt="twitter-icon" /></a
 					><a href=""
-						><img src="/images/icons/youtube.png" alt="youtube-icon"
+						><img src="./images/icons/youtube.png" alt="youtube-icon"
 					/></a>
 				</div>
 			</div>
