added new time management section

--- a/index.html
+++ b/index.html
@@ -135,11 +135,38 @@
 
 			<section class="time-management">
 				<div class="time-management-container">
-					<h1 class="section-title"></h1>
-					<p class="section-description"></p>
+					<h1 class="section-title">Time Management</h1>
+					<p class="section-description">
+						Effective time management is an important skill to have, especially
+						when working towards a "new you". By managing your time more
+						effectively, you can get more done, reduce stress, and feel more in
+						control of your life.
+					</p>
 					<div class="management-cards-container">
-						<div class="time-card"></div>
-						<div class="time-card"></div>
+						<div class="time-card">
+							<h2 class="time-card-title">Tips for time management</h2>
+							<p class="time-card-sub-title">
+								Here are a few tips for managing your time more effectively:
+							</p>
+							<ul>
+								<li class="time-tips-list-item">-Set priorities</li>
+								<li class="time-tips-list-item">Create a schedule</li>
+								<li class="time-tips-list-item">Eliminate distraction</li>
+							</ul>
+						</div>
+						<div class="time-card">
+							<h2 class="time-card-title">Time management tools</h2>
+							<p class="time-card-sub-title">
+								Some popular tools for managing time more effectively:
+							</p>
+
+							<ul>
+								<li class="time-tool-list-item">Time management apps</li>
+								<li class="time-tool-list-item">Productivity methods</li>
+								<li class="time-tool-list-item">Time blocking</li>
+								<li class="time-tool-list-item"></li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</section>
