--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700&display=swap"
 			rel="stylesheet"
 		/>
 		<title>NEW ME</title>
@@ -51,6 +51,7 @@
 							alt="person telling her past story"
 						/>
 					</div>
+					<!-- section article  -->
 					<div class="article-container">
 						<h1 class="article-title">
 							My failures of <br />
@@ -65,6 +66,7 @@
 						<div>
 							<ul class="failing-items">
 								<li>
+									<!-- here &#x2713; can be used as a html symbol for tick mark .  -->
 									<span class="tick-sign">&#x2713;</span> Contrary to popular
 									belief, is not simply.
 								</li>
@@ -121,6 +123,8 @@
 					</div>
 				</div>
 			</section>
+
+			<!-- Motivation banner section -->
 			<section class="motivation-section">
 				<div class="motivation-banner-container">
 					<h1 class="section-title">
@@ -130,7 +134,7 @@
 					<button class="btn-primary">Call Now</button>
 				</div>
 			</section>
-			<!-- personally added a section on time management for self improvement -->
+			<!-- personally added a section on 'time management for self improvement' -->
 			<!-- bonus section -->
 
 			<section class="time-management">
@@ -144,17 +148,26 @@
 					</p>
 					<div class="management-cards-container">
 						<div class="time-card">
+							<div class="card-img-container">
+								<img
+									src="./images/icons/project-management.png"
+									alt="time-management"
+								/>
+							</div>
 							<h2 class="time-card-title">Tips for time management</h2>
 							<p class="time-card-sub-title">
 								Here are a few tips for managing your time more effectively:
 							</p>
 							<ul>
-								<li class="time-tips-list-item">-Set priorities</li>
+								<li class="time-tips-list-item">Set priorities</li>
 								<li class="time-tips-list-item">Create a schedule</li>
 								<li class="time-tips-list-item">Eliminate distraction</li>
 							</ul>
 						</div>
 						<div class="time-card">
+							<div class="card-img-container">
+								<img src="./images/icons/time-tool.png" alt="time-management" />
+							</div>
 							<h2 class="time-card-title">Time management tools</h2>
 							<p class="time-card-sub-title">
 								Some popular tools for managing time more effectively:
@@ -164,13 +177,14 @@
 								<li class="time-tool-list-item">Time management apps</li>
 								<li class="time-tool-list-item">Productivity methods</li>
 								<li class="time-tool-list-item">Time blocking</li>
-								<li class="time-tool-list-item"></li>
 							</ul>
 						</div>
 					</div>
 				</div>
 			</section>
 		</main>
+
+		<!-- footer area -->
 		<footer>
 			<div class="contact-info-container">
 				<h1 class="section-title">Future</h1>
